--- a/src/app/components/paciente/paciente.component.html
+++ b/src/app/components/paciente/paciente.component.html
@@ -1,6 +1,9 @@
 <div class="container">
-
-  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+  <div class="descargardiv">
+    <button class="descargar" (click)="exporter.exportTable('xlsx',{fileName:'Pacientes'})" mat-button >Descarga <mat-icon>cloud_download</mat-icon></button>
+  </div>
+  <br>
+  <table mat-table [dataSource]="dataSource" matTableExporter matSort class="mat-elevation-z8" #exporter="matTableExporter">
 
     <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
