--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,12 +1,13 @@
-.copyride{
+.copyride {
   font-size: 10px;
   margin: auto;
 }
 
-.footer{
-    background-color: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    color: white;
+.footer {
+  margin-top: 2%;
+  background-color: black;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  color: white;
 }
